--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -91,7 +91,7 @@ input[type=submit]:hover {
 /* header-css */
 
 header {
-  background-color: #123781;
+  background-color: #1348b3;
   display: flex;
   flex-direction: row;
   align-items: center;
